k8s/mysql-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-mysql
spec:
  selector:
    matchLabels:
      app: reservation
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: reservation
        tier: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
