k8s/reservation-deployement.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: reservation-app
spec:
  selector:
    matchLabels:
      app: reservation
  replicas: 3
  template:
    metadata:
      labels:
        app: reservation
        tier: app
    spec:
      containers:
        - name: reservation
          image: gaetancollaud/reservation
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /management/health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /management/health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 30
