k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-mysql
  labels:
    app: reservation
spec:
  ports:
    - port: 3306
  selector:
    app: reservation
    tier: mysql
  clusterIP: None
