k8s/reservation-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reservation-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: reservation.local
      http:
        paths:
          - path: /
            backend:
              serviceName: reservation-http
              servicePort: 8080
